Refactor XPath validation rules